# kaggle-santa-2022

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
outputs/: orthant1-18065941.tour  orthant2-18532597.tour  orthant3-18458619.tour  orthant4-18674905.tour
submissions/: submission.csv
tasks/: __init__.py  cost.py  hpp.py  lkh.py  utils.py
